# protobuf-qt

./: CMakeLists.txt  conanfile.py
compiler/: protobuf_qt_generator.cpp
